# zippo

./: README.md  pyproject.toml
tests/: test_zippo.py
zippo/: __about__.py  __main__.py
