[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zippo"
dynamic = ["version"]
description = 'A command line tool for creating ZIP files.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "PolyPik", email = "bighorn_se@yahoo.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/PolyPik/zippo#readme"
Issues = "https://github.com/PolyPik/zippo/issues"
Source = "https://github.com/PolyPik/zippo"

[tool.hatch.version]
path = "zippo/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:zippo tests}"

[tool.coverage.run]
source_pkgs = ["zippo", "tests"]
branch = true
parallel = true
omit = [
  "zippo/__about__.py",
]

[tool.coverage.paths]
zippo = ["zippo", "*/zippo/zippo"]
tests = ["tests", "*/zippo/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
